--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "@types/node": "^18.15.11",
     "@types/redis": "^4.0.11",
     "nodemon": "^2.0.22",
+    "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "redis": "^4.6.5"
