--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,34 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "./source/index.ts",
+  "main": "./source/web/api/server.ts",
   "license": "MIT",
   "engines": {
     "node": "16.10.0"
   },
   "scripts": {
-    "start": "ts-node source/index.ts",
-    "dev": "nodemon source/index.ts"
+    "start": "ts-node source/web/api/server.ts",
+    "dev": "nodemon source/web/api/server.ts",
+    "push": "npx prisma db push --skip-generate"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "@types/redis": "^4.0.11",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "yup": "^1.1.1"
   }
 }
