Add wait-for-it.sh and start.sh

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,14 @@
 FROM --platform=linux/amd64 node:16.10
 WORKDIR /app
-COPY backend/package*.json ./
+COPY backend/package.json ./
+COPY backend/yarn.lock ./
+
 RUN yarn install
+
+COPY /backend/prisma ./prisma/
+
 COPY ./backend ./
 
 EXPOSE 5000
-CMD [ "yarn", "run", "start" ]
+
+CMD [ "yarn", "run", "dev" ]
