--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "@types/redis": "^4.0.11",
     "nodemon": "^2.0.22",
@@ -26,6 +28,7 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "redis": "^4.6.5",
