--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "redis": "^4.6.5",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.0",
     "yup": "^1.1.1"
   }
 }
