--- a/frontend/packages/mobile/package.json
+++ b/frontend/packages/mobile/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-intl": "^6.4.4",
     "react-native": "0.71.8",
-    "react-router-native": "^6.13.0"
+    "react-router-native": "^6.13.0",
+    "socket.io-client": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
