--- a/frontend/packages/web/package.json
+++ b/frontend/packages/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
@@ -17,6 +18,7 @@
     "socket.io-client": "^4.7.0"
   },
   "devDependencies": {
+    "@types/ramda": "^0.29.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
